youfull/objects/Lead_Metrics_Field_Setup__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Contains mapping between lead metrics fields (object: Lead_Metrics__c) and the corresponding condition which is used populate such fields. This setting is used by LeadMetricsBatch class.</description>
    <fields>
        <fullName>Lead_Condition_Field_Name__c</fullName>
        <description>Refers to Lead object. This should either be a straight text field or a formula text field.</description>
        <inlineHelpText>Refers to Lead object. This should either be a straight text field or a formula text field.</inlineHelpText>
        <label>Lead Condition Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Condition_Field_Value__c</fullName>
        <description>Refers to Lead object. This is the expected value for the field referred by &apos;Lead Condition Field Name&apos; field. This field is populated ONLY for COUNT() functionality. This field should carry only text value.</description>
        <inlineHelpText>Refers to Lead object. This is the expected value for the field referred by &apos;Lead Condition Field Name&apos; field. This field is populated ONLY for COUNT() functionality. This field should carry only text value.</inlineHelpText>
        <label>Lead Condition Field Value</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Metrics_Field_Name__c</fullName>
        <description>Refers to Lead_Metrics__c custom object</description>
        <inlineHelpText>Refers to Lead_Metrics__c custom object</inlineHelpText>
        <label>Lead_Metrics_Field_Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Summary_Field_Name__c</fullName>
        <description>If this field is populated, SUM() function will be applied to this field. Otherwise COUNT() will be applied. This field should carry Number (Integer) data type.</description>
        <inlineHelpText>If this field is populated, SUM() function will be applied to this field. Otherwise COUNT() will be applied. This field should carry Number (Integer) data type.</inlineHelpText>
        <label>Lead Summary Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lead Metrics Field Setup</label>
</CustomObject>